--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "minesweeper",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "classnames": "^2.2.5",
     "react": "^16.2.0",
